# prueba_python_back

./: .dockerignore  .gitignore  Dockerfile  README.md  api_error_handler.py  fetch_engine.py  logger.py  main.py  mkdocs.yml  models.py  pyproject.toml
app/: main.py
app/api/: api.py
app/api/endpoints/: general.py  users.py
app/core/: config.py
app/schemas/: album.py  post.py  response.py  todos.py  user.py
app/services/: external_api_service.py
app/utils/: api_error_handler.py  logger_config.py
docs/: docker.md  index.md  installation.md  testing.md
docs/architecture/: design-decisions.md  project-structure.md
docs/usage/: api-reference.md  postman-guide.md
tests/: data.py  test_endpoint.py  test_service.py
