[project]
name = "jsonplaceholder-proxy-api"
version = "1.0.0"
description = "API de prueba construida con FastAPI para consumir datos de JSONPlaceholder."
authors = [
    {name = "jemeza06",email = "jesusandresmez@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13 <4.0"
dependencies = [
    "pydantic[email] (>=2.11.7,<3.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "logging (>=0.4.9.6,<0.5.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "respx (>=0.22.0,<0.23.0)",
    "pytest-asyncio (>=1.1.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.16"

